swagger for stops
