# backend/cmd/server/main.go
@@ -68,18 +68,18 @@ func main() {
 	router.PUT("/api/drivers/:id", driverController.UpdateById)
 
 	router.GET("/api/stops/id/:id", busStopController.GetById)
-	router.GET("/api/stops/number/:name", busStopController.GetByName)
+	router.GET("/api/stops/name/:name", busStopController.GetByName)
 	router.GET("/api/stops/", busStopController.GetAll)
 	router.POST("/api/stops/", busStopController.Add)
 	router.DELETE("/api/stops/:id", busStopController.DeleteById)
-	router.PUT("/api/stops/", busStopController.UpdateById)
+	router.PUT("/api/stops/:id", busStopController.UpdateById)
 
 	router.GET("/api/routes/:id", routeController.GetById)
 	router.GET("/api/routes/number/:number", routeController.GetByNumber)
 	router.GET("/api/routes/", routeController.GetAll)
 	router.POST("/api/routes/", routeController.Add)
 	router.DELETE("/api/routes/:id", routeController.DeleteById)
-	router.PUT("/api/routes/", routeController.UpdateById)
+	router.PUT("/api/routes/:id", routeController.UpdateById)
 	router.POST("/api/routes/:id/drivers/:driverId", routeController.AssignDriver)
 	router.POST("/api/routes/:id/stops/:busStopId", routeController.AssignBusStop)
 	router.POST("/api/routes/:id/buses/:busId", routeController.AssignBus)
